--- a/src/CSS/Estilos.css
+++ b/src/CSS/Estilos.css
@@ -1,3 +1,14 @@
+body {
+  /* font-family: "roboto", sans-serif !important; */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
+
 /* 📌 Contenedor principal del marcador */
 .marker-container {
   position: relative;
@@ -94,12 +105,14 @@
   position: absolute;
   top: 20px; /* Margen superior */
   left: 10px; /* Margen izquierdo */
-  width: 250px; /* Ancho del panel */
+  width: 260px; /* Ancho del panel */
   height: calc(100vh - 100px);
   background: white; /* ✅ Fondo blanco */
   color: black; /* ✅ Texto en negro para contraste */
-  padding: 20px;
-  border-radius: 10px; /* Bordes redondeados */
+  /* padding: 20px; */
+  /* border-radius: 10px; */
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
   box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.2); /* ✅ Sombrado más sutil */
   z-index: 1001; /* Asegura que esté sobre el mapa */
   overflow: hidden; /* Evita que se desborde */
@@ -119,7 +132,7 @@
   z-index: 1000; /* Asegura que esté sobre el mapa */
   background-color: #5d428b;
   padding: 10px 10px 10px 10px;
-  border-radius: 5px;
+  border-radius: 25px;
   transition: background 0.3s ease-in-out;
 }
 
@@ -141,4 +154,37 @@
   align-items: center;
   justify-content: center;
   font-size: 20px;
+}
+
+/* 📌 Caja flotante de la simbologia */
+.floating-box {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  display: flex;
+  align-items: center;
+  background: rgba(61, 64, 91, 0.4);
+  padding: 7px 10px 7px 10px;
+  border-radius: 5px;
+  z-index: 1002;
+}
+
+.box-border {
+  width: 35px;
+  height: 20px;
+  border: 3px solid #167921;
+  margin-right: 10px;
+}
+
+.box-text {
+  font-size: 10px;
+  color: #ffff;
+  font-weight: bold;
+  letter-spacing: 1px;
+}
+
+@media (max-width: 768px) {
+  .floating-box {
+    display: none;
+  }
 }
